--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,31 @@
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
   <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
-        </ul>
+      <div class="footer-col footer-col-5">
+        <p>&copy;2019 Copyright <a href="{{ "/" | relative_url }}">Nuno Barreiro</a></p>
       </div>
-
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-      </div>
+      <div class="footer-col footer-col-5 social-media-links">
+          <a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg
+              class="svg-icon">
+              <use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use>
+            </svg>
+          </a>
+          <a target="_blank" href="https://www.twitter.com/{{ site.twitter_username| cgi_escape | escape }}"><svg
+              class="svg-icon">
+              <use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use>
+            </svg>
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg
+              class="svg-icon">
+              <use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use>
+            </svg>
+          </a>
+          <a target="_blank" href="{{ 'feed.xml' | relative_url }}"><svg class="svg-icon">
+              <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+            </svg>
+          </a>
+        </div>
     </div>
-
   </div>
-
 </footer>
